  expanding mappings (as fields may not set to null).
- ALL (minor): Comparison of codes of Messages changed due to changes in how PHP8 compares
  strings and numbers.

Refactorings:
- ALL: Removed vat breakdown from Totals. Totals now merely represents an amount (broken
  down in a price inc, price ex, and vat amount).

8.2.0 (2024-07-11) (ALL)
------------------------
Features:
- ALL: A new setting has been introduced that allows to add the e-invoice to the Acumulus
  invoice pdf when it gets mailed to the customer (either on sending the invoice data to
  Acumulus or using the buttons specific for mailing the invoice pdf (on the invoice list
  and/or details screens).

Bugs:
- ALL: If tax is based on shipping address, and the shipping country differs from the
  invoice country, the vat rate lookups/checks would still use the invoice country.


8.1.5 (2024-07-02) (OC)
-----------------------
Bugs:
- ALL: External links on our forms: were not all opened in a new tab; and some referred to
  outdated URLs.
- ALL: Field product name on mappings form does not correspond with mapping for product
  name. As it was not yet really used, this is no big deal.
- ALL: Completing invoice lines: computing unitprice based on unitpriceinc with a vatrate
  of -1 (vat free) was not done correctly. Known usages: OC.
- OC4: Source::getPaymentMethod(): storage of this info has changed in OC4 compared to OC3
  and a 2nd time within OC4.
- OC4: Order statuses were not presented by their name (but by their language_id).

Refactorings:
- OC: Implemented the new "collect-complete architecture" for OpenCart.


8.1.4 (2024-05-22) (JOO)
------------------------
Bugs:
- JOO3: TypeError: Return value of Siel\Acumulus\Joomla\Helpers\Event::getCMSApplication()
  must be an instance of Joomla\CMS\Application\CMSApplicationInterface, instance of
  Joomla\CMS\Application\AdministratorApplication returned in Joomla/Helpers/Event.php:51